--- a/1.html
+++ b/1.html
@@ -1,1 +1,8 @@
-<h1>欢迎来到我的网页</h1>
+<!DOCTYPE html>
+<html>
+    <body>
+        <head>我的第一个标题</head>
+        <p>我的第一个段落</p>
+        <p>欢迎来到我的网页！</p>
+    </body>
+</html>
