--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <head>我的第一个标题</head>
-        <p>我的第一个段落</p>
-        <p>欢迎来到我的网页！</p>
+            <div id="head" style="width:500px">
+            <head>我的第一个标题</head>
+            <p>我的第一个段落</p>
+            <p>欢迎来到我的网页！</p>
+            </div>
     </body>
 </html>
