--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html>
+    <head style="width: 100%;height: 100%;">
+        <meta charset="utf-8">
+        <title>我的第一个标签</title>
+        <style>
+            .bold_and_large {
+                font-weight: bold; /* 加粗文本 */
+                font-size: 200%; /* 增大文本的大小 */
+            }
+        </style>
+        <h1 style=" text-align: center; font-weight: bold; font-size: 150%;">我的第一个标题</h1><hr>
+    </head>
     <body>
-            <div id="head" style="width:500px">
-            <head>我的第一个标题</head>
+            <div id="head" style="width:100%">
             <p>我的第一个段落</p>
-            <p>欢迎来到我的网页！</p>
+            <p>我也不知道该在自己的网页里写点什么，所以我只是尽可能把它变得好看<span style="font-size: 1%"><bdo dir="rtl">(我会不定时的更新)</bdo></span></p>
+
+            <p class="bold_and_large">欢迎来到我的网页！</p>
             </div>
     </body>
 </html>
