--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
                 font-size: 200%; /* 增大文本的大小 */
             }
         </style>
-        <h1 style=" text-align: center; font-weight: bold; font-size: 150%;">我的第一个标题</h1><hr>
+        <h1 style=" text-align: center; font-weight: bold; font-size: 250%;">我的第一个标题</h1><hr>
     </head>
     <body>
-            <div id="head" style="width:100%">
+            <div id="head" style="font-size: 200%">
             <p>我的第一个段落</p>
             <p>我也不知道该在自己的网页里写点什么，所以我只是尽可能把它变得好看<span style="font-size: 1%"><bdo dir="rtl">(我会不定时的更新)</bdo></span></p>
 
