--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
                 font-size: 200%; /* 增大文本的大小 */
             }
         </style>
-        <h1 style=" text-align: center; font-weight: bold; font-size: 150%;">我的第一个标题</h1><hr>
+        <h2 style=" text-align: center; font-weight: bold; font-size: 150%;">我的第一个标题</h2><hr>
     </head>
     <body>
             <div id="head" style="font-size: 100%">
             <p>我的第一个段落</p>
-            <p class="bold_and_large">欢迎来到我的网页！</p>
+            <h1 class="bold_and_large">欢迎来到我的网页！</h1>
             </div>
     </body>
 </html>
