--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
                 font-size: 200%; /* 增大文本的大小 */
             }
         </style>
-        <h2 style=" text-align: center; font-weight: bold; font-size: 150%;">我的第一个标题</h2><hr>
+        <h2 style=" text-align: center; font-weight: bold; font-size: 150%;">我的第一个标题</h2>
+        <hr color="grey" width="" size="" align="">
     </head>
     <body>
             <div id="head" style="font-size: 100%">
