--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
     <head style="width: 100%;height: 100%;">
         <meta charset="utf-8">
         <title>我的第一个标签</title>
@@ -9,13 +10,18 @@
                 font-size: 200%; /* 增大文本的大小 */
             }
         </style>
-        <h2 style=" text-align: center; font-weight: bold; font-size: 150%;">我的第一个标题</h2>
-        <hr color="grey" width="" size="" align="">
     </head>
-    <body>
+
+    <body>  
+            <h2 style=" text-align: center; font-weight: bold; font-size: 150%">
+                <img src="" alt=" " title="first image" width="5%" style="float: left;">
+                我的第一个标题</h2>
+            <hr color="grey" width="100%" size="" align="center">
+
             <div id="head" style="font-size: 100%">
             <p>我的第一个段落</p>
             <h1 class="bold_and_large">欢迎来到我的网页！</h1>
             </div>
     </body>
+
 </html>
