--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
             <div id="head" style="font-size: 100%">
             <p>我的第一个段落</p>
-            <h1 class="bold_and_large">欢迎来到我的网页！</h1>
+            <h1 class="bold_and_large"><em>欢迎来到我的网页！</em></h1>
             </div>
     </body>
 
