--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
             <div id="head" style="font-size: 100%">
             <p>我的第一个段落</p>
             <h1 class="bold_and_large"><em>欢迎来到我的网页！</em></h1>
-            <p><a href="tencent13227179928642471037.txt">tencent13227179928642471037.txt</a></p>
+            <form action="" method="get" name="first_form">
+                用户名：<input type="text"><br>
+                <span style="margin-left: 16px;">密码：<input type="password"><button>注册</button></span>
+            </form>
             </div>
     </body>
 
