--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
             <hr color="grey" width="100%" size="" align="center">
 
             <div id="head" style="font-size: 100%">
-            <p>我的第一个段落</p>
+            <p>我的第一个段落
+            <img src="reward.jpg" alt="打赏" title="打赏" width="10%" style="float: right">
+            </p>
             <h1 class="bold_and_large"><em>欢迎来到我的网页！</em></h1>
             <form action="" method="get" name="first_form">
                 用户名：<input type="text"><br>
