--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
         <meta charset="utf-8">
         <title>我的第一个标签</title>
         <style>
-            .bold_and_large {
-                font-weight: bold; /* 加粗文本 */
-                font-size: 200%; /* 增大文本的大小 */
-            }
+            
         </style>
+        <link rel="stylesheet" href="public.css">
     </head>
 
     <body>  
