--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
     </head>
 
     <body>  
+            <ul>
+                <li><a href="index.html">主页</a></li>
+                <li><a href="index.html">主页</a></li>
+                <li><a href="index.html">主页</a></li>
+                <li><a href="index.html">主页</a></li>
+                <li><a href="index.html">主页</a></li>
+            </ul>
             <h2 style=" text-align: center; font-weight: bold; font-size: 150%">
                 <img src="" alt=" " title="first image" width="5%" style="float: left;">
                 我的第一个标题</h2>
@@ -18,7 +25,7 @@
 
             <div id="head" style="font-size: 100%">
             <p>我的第一个段落
-            <img src="reward.jpg" alt="打赏" title="打赏" width="10%" style="float: right">
+            <!-- <img src="reward.jpg" alt="打赏" title="打赏" width="10%" style="float: right"> -->
             </p>
             <h1 class="bold_and_large"><em>欢迎来到我的网页！</em></h1>
             <form action="" method="get" name="first_form">
