--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
     <body>  
                 <ul>
-                    <li><a href="index.html">主页</a></li>
-                    <li><a href="index.html">主页</a></li>
+                    <li><a href="www.zd1z.com">张店一中官网</a></li>
+                    <li><a href="www.baidu.com">百度</a></li>
                     <li><a href="index.html">主页</a></li>
                     <li><a href="index.html">主页</a></li>
                     <li><a href="index.html">主页</a></li>
