--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <head style="width: 100%;height: 100%;">
         <meta charset="utf-8">
-        <title>我的第一个标签</title>
+        <title>welcome</title>
         <style>
             
         </style>
@@ -13,7 +13,7 @@
     <body>  
                 <ul>
                     <li><a href="www.zd1z.com">张店一中官网</a></li>
-                    <li><a href="www.baidu.com">百度</a></li>
+                    <li><a href="new_file.html">新标签页</a></li>
                     <li><a href="index.html">主页</a></li>
                     <li><a href="index.html">主页</a></li>
                     <li><a href="index.html">主页</a></li>
