--- a/new_file.html
+++ b/new_file.html
@@ -11,5 +11,10 @@
 				<a href="index.html">主页</a>
 			</li>
 		</ul>
+		<hr color="grey" width="100%" size="" align="center">
+		<div>
+			<h2>课表</h2>
+			<img src="Curriculum.png" alt=" " title="Curriculum"/>
+		</div>
 	</body>
 </html>
