--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <body>  
                 <ul>
-                    <li><a href="www.zd1z.com">张店一中官网</a></li>
+                    <li><a href="www.zd1z.cn">张店一中官网</a></li>
                     <li><a href="new_file.html">新标签页</a></li>
                     <li><a href="index.html">主页</a></li>
                     <li><a href="index.html">主页</a></li>
