--- a/new_file.html
+++ b/new_file.html
@@ -15,6 +15,9 @@
 		<div>
 			<h2>课表</h2>
 			<img src="Curriculum.png" alt=" " title="Curriculum"/>
+			<h2>作息时间表</h2>
+			<img src="Time Table.png" alt=" " title="Time Table"/>
 		</div>
+		
 	</body>
 </html>
